# doctest_multiple_dlls

./: CMakeLists.txt
example/: CMakeLists.txt  dllA.cpp  dllA2.cpp  dllB.cpp  dllB2.cpp  main.cpp  testrunner.cpp
testexecutable/: CMakeLists.txt  main.cpp
testrunner/: CMakeLists.txt  testrunner.cpp
testsA/: CMakeLists.txt  dllA.cpp  dllA2.cpp
testsB/: CMakeLists.txt  dllB.cpp  dllB2.cpp
